# franco_slm

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/config/: config.yaml
src/data/: prepare.py
src/franco/: franco.py  model.py
src/notify/: discord_notifier.py
src/train/: train.py
